--- a/popup.html
+++ b/popup.html
@@ -18,7 +18,8 @@
     <body>
         <h1>Input ID</h1>
         <textarea id="user" rows="3"></textarea>
+        <button id="button" type="button">Submit</button>
         <div id="result">Type user id separated by comma(,)</div>
-        <script src="script.js"></script>
+        <script src="popup.js"></script>
     </body>
 </html>
